Small fix to scrolling
The last item in the table was being cut off, this seems to fix it

--- a/frontend/src/mainframe/mainframe.module.css
+++ b/frontend/src/mainframe/mainframe.module.css
@@ -36,8 +36,7 @@
 
 .pageBody {
     width: 100%;
-    overflow: hidden;
-
+    overflow: auto;
 }
 
 .versionLink {
